BP-1541: fix horizontal scrolling on l-course

--- a/app/blocks/n-course/l-course/b-information-board/b-information-board.scss
+++ b/app/blocks/n-course/l-course/b-information-board/b-information-board.scss
@@ -94,5 +94,11 @@
     .b-information-board__description {
         padding-left: 145px;
     }
+
+    .b-information-board__description-text {
+        display: block;
+
+        word-wrap: break-word;
+    }
 }
 
